--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -10,14 +10,16 @@
         They are not exclusive for combat situations, 
         to create a technique that does not do damage select the boon/bane tag†. To make techniques an important aspect of a characters they will have 
         multiple techniques but each can only be used once per session. The GM will create custom partial success options for each technique.
+    </p>
     <h2>Crunch</h2>
     <ul>
         <li> Characters have a pool of points equal to 10+2*LVL.</li>
         <li> A technique can have a maximum value of ⅔ of a character's total pool†.</li>
-        <li> Techniques are rolled +LVL</li>
+        <li> Techniques are rolled + an attribute that fits.</li>
         <li> There are four tiers of tags with increasing cost†.</li>
         <li> Some tags have multiple tiers, which require more points.</li>
         <li> The base damage for techniques is equal to your damage +1d6.</li>
+        <li> These tags a subject to change and distances are flexible to the story</li>>
     </ul>
     <h2>Guide to Tags</h2>
     <div id="accordion">
@@ -36,7 +38,10 @@
                     <dt>Effect</dt>
                     <dd>Each tier adds +1 damage (or heal based on tags). Costs 1 point.</dd>
                     <dt>†Boon/Bane</dt>
-                    <dd>Exchange all of the techniques damage/effect for +4 free points for this move and +4 to its cap, these points do not count for the total pool.</dd>
+                    <dd>Exchange all of the techniques damage/effect for +4 free points for this move and +4 to its cap, 
+                      these points do not count for the total pool.</dd>
+                    <dd>This tag is not compatible with <em>Heal</em> or <em>Vampiric</em>. When paired with <em>Summon</em>, the new arrivals will not
+                    deal damage.</dd>
                 </dl> 
             </div>
           </div>
@@ -56,11 +61,11 @@
                 <dd>How many places or people or things a technique can target. Default value is 1, every 2 points raises the number of targets by 1.</dd>
                 <dt>Range</dt>
                 <dd>How far your technique can reach. Default range is <b>Close</b>. Then <b>Reach</b>: up to 12 ft, <b>Near</b>: across a 2 way road, <b>Far</b>: down the length of football field
-                , <b>Remote</b>: Out of sight</dd>
+                , <b>Remote</b>: Out unaidded of sight</dd>
                 <dt>Forceful</dt>
                 <dd>Has a lot of force behind it enough to knock people and furniture down.</dd>
                 <dt>Disarming</dt>
-                <dd>Removes the primary weapons of the target, even natural ones.</dd>
+                <dd>Removes the primary weapon of the target, even natural ones.</dd>
               </dl> 
             </div>
           </div>
@@ -93,6 +98,20 @@
                   <dt>Area</dt>
                   <dd>How large of an area the technique affects. Default is no area. <b>Small</b> area has 10 foot radius each additional levels doubles the radius. <b>Large</b> is 40ft, <b>colossal</b> is 320.</dd>
                   <dd>None, Small, Medium, Large, Huge, Enormous, Colossal, Titanic</dd>
+                  <dt>Create Terrain</dt>
+                  <dd>Change the physical terrain or create a new feature of your chocie. By default this change can affect a 7 foot radius.</dd>
+                  <dt>Practiced</dt>
+                  <dd>When you use a practiced move your roll has +2.</dd>
+                  <dt>Stunning</dt>
+                  <dd>Creatures affected by stunning moves are unable to react to anything around until shaken out of it.</dd>
+                  <dt>Subtle</dt>
+                  <dd>It is very difficult for creatures to notice you using this technique and you are more than likely to get away without 
+                    notice.</dd>
+                  <dt>Summon</dt>
+                  <dd>You summon a number of creatures to aid you, they will follow your commands as long as it does not conflict with their nature.
+                    The other tags on this technique are applied to the abilities of the summoned entities.
+                  </dd>
+                  <dd>This move forfeits initial damage; instead the summoned creatures can deal up to the damage of the technique when they attack.</dd>
                 </dl>
               </div>
             </div>
