changing model tag tiers and saving structure

--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -19,7 +19,8 @@
         <li> There are four tiers of tags with increasing cost†.</li>
         <li> Some tags have multiple tiers, which require more points.</li>
         <li> The base damage for techniques is equal to your damage +1d6.</li>
-        <li> These tags a subject to change and distances are flexible to the story</li>>
+        <li> Most techniques are instant effects with no duration, some will last for the whole scene.</li>
+        <li> These tags a subject to change and distances are flexible to the story</li>
     </ul>
     <h2>Guide to Tags</h2>
     <div id="accordion">
@@ -60,12 +61,12 @@
                 <dt>Multitarget</dt>
                 <dd>How many places or people or things a technique can target. Default value is 1, every 2 points raises the number of targets by 1.</dd>
                 <dt>Range</dt>
-                <dd>How far your technique can reach. Default range is <b>Close</b>. Then <b>Reach</b>: up to 12 ft, <b>Near</b>: across a 2 way road, <b>Far</b>: down the length of football field
+                <dd>How far your technique can reach. Default range is <b>Close</b>. Then <b>Reach</b>: up to 12 ft, <b>Near</b>: across a 6 lane road, <b>Far</b>: down the length of football field
                 , <b>Remote</b>: Out unaidded of sight</dd>
                 <dt>Forceful</dt>
-                <dd>Has a lot of force behind it enough to knock people and furniture down.</dd>
+                <dd>Has a lot of force behind it, enough to move people around and knock them down. Every level can move targets about 10 more feet.</dd>
                 <dt>Disarming</dt>
-                <dd>Removes the primary weapon of the target, even natural ones.</dd>
+                <dd>Removes a weapon of the target, even natural ones.</dd>
               </dl> 
             </div>
           </div>
@@ -80,7 +81,7 @@
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="card-body">
-                <!-- TODO -->
+              
             </div>
           </div>
         </div>
@@ -112,6 +113,10 @@
                     The other tags on this technique are applied to the abilities of the summoned entities.
                   </dd>
                   <dd>This move forfeits initial damage; instead the summoned creatures can deal up to the damage of the technique when they attack.</dd>
+                  <dt>Transformation</dt>
+                  <dd>You change the physical form of your target(s) into something new.</dd>
+                  <dt>Vampiric</dt>
+                  <dd>The damage dealt by this technique (after reductions) is returned to you as HP.</dd>
                 </dl>
               </div>
             </div>
