first go at showing fields

--- a/app/unlimited/templates/unlimited/character.html
+++ b/app/unlimited/templates/unlimited/character.html
@@ -9,8 +9,9 @@
     </div>
     <h2 class="article-title"> {{ object.name }}</h2>
     <p class="article-content">Level: {{ object.level }}</p>
+    <p class="article-content">Max: {{ object.max_cost }}</p>
     <p class="article-content">Pool: {{ object.point_pool }}</p>
-    <p class="article-content">Current: {{ object.current_points }}</p>
+    <p class="article-content">Available: {{ object.available }}</p>
     
     </div>
 </article>
