--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -81,7 +81,24 @@
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
             <div class="card-body">
-              
+              <dl>
+                <dt>Armor Piercing</dt>
+                <dd>Damage done by this technique ignores targets' armor.</dd>
+                <dt>Combo</dt>
+                <dd>When you use this technique in tandem with another player's technique, <em>you</em>gain advantage on the roll and effect.</dd>
+                <dt>Controlled</dt>
+                <dd>If this technique targets an area, you can exempt people or places from the effects.</dd>
+                <dt>Destructive</dt>
+                <dd>Can wreck walls, break boulders, or pulp peolple.</dd>
+                <dt>Frightning</dt>
+                <dd>Either by show of power, sensory disturbance, or supernatural means, causes fear in those that witness.</dd>
+                <dt>Heal</dt>
+                <dd>Instead of dealing damage, this technique heals targets. The heal amount is 50% of the damage then 100% after tier 2.</dd>
+                <dt>Immobilizing</dt>
+                <dd>This technique stops targets from moving.</dd>
+                <dt>Longlasting</dt>
+                <dd>The active effects of this technique can last longer than the current scene.</dd>
+              </dl>
             </div>
           </div>
         </div>
