--- a/app/unlimited/templates/unlimited/technique.html
+++ b/app/unlimited/templates/unlimited/technique.html
@@ -17,6 +17,13 @@
        
     </div>
     <h2 class="article-title"><a href="{% url "technique-detail" object.slug %}"> {{ object.name }}</a></h2>
+
+        {% for field, value in object.fields.items %}
+            
+            {{ field }}: {{ value }}
+            
+        {% endfor %}
+
     <p class="article-content">{{ object.content }}</p>
         <div>
            Created By <img class="rounded-circle article-img" style="width:5%;height:5%;margin-left:6px;margin-right:6px" src="{{object.author.profile.pfp.url}}"><a class="mr-2" href="{% url "user-techniques" object.author.username %}">{{ object.author }}</a>
