--- a/app/unlimited/templates/unlimited/technique_form.html
+++ b/app/unlimited/templates/unlimited/technique_form.html
@@ -9,7 +9,8 @@
                 <legend class ="border-bottem mb-4">Design Your Technique</legend>
                 {% crispy form %}
             </fieldset>
-           <span><p>Maximum Cost: {{ form.instance.max_cost }}<p></span>
+           <span><p>Character's Max Cost: {{ form.instance.character.max_cost }}<p></span>
+           <span><p>Available Points: {{ form.instance.character.available_points }}<p></span>
            <span><p>Most Recent Submission: {{ form.instance.cost }}<p></span> 
         </form>
         
