fixed tag shared with model, signal, about, form

--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -94,10 +94,12 @@
                 <dd>Either by show of power, sensory disturbance, or supernatural means, causes fear in those that witness.</dd>
                 <dt>Heal</dt>
                 <dd>Instead of dealing damage, this technique heals targets. The heal amount is 50% of the damage then 100% after tier 2.</dd>
-                <dt>Immobilizing</dt>
-                <dd>This technique stops targets from moving.</dd>
-                <dt>Longlasting</dt>
+                <dt>Long Lasting</dt>
                 <dd>The active effects of this technique can last longer than the current scene.</dd>
+                <dt>Mobile</dt>
+                <dd>As part of this technique you quickly move to somewhere near.</dd>
+                <dt>Restricting</dt>
+                <dd>This technique restricts some part of the targets' bodies, usually legs or arms.</dd>
               </dl>
             </div>
           </div>
