finished tag displaying

--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -13,13 +13,14 @@
     </p>
     <h2>Crunch</h2>
     <ul>
-        <li> Characters have a pool of points equal to 10+2*LVL.</li>
+        <li> Characters have a pool of points equal to 12+3*LVL.</li>
         <li> A technique can have a maximum value of ⅔ of a character's total pool†.</li>
         <li> Techniques are rolled + an attribute that fits.</li>
         <li> There are four tiers of tags with increasing cost†.</li>
         <li> Some tags have multiple tiers, which require more points.</li>
         <li> The base damage for techniques is equal to your damage +1d6.</li>
         <li> Most techniques are instant effects with no duration, some will last for the whole scene.</li>
+        <li> Characters can have a maximum of 3 techniques</li>
         <li> These tags a subject to change and distances are flexible to the story</li>
     </ul>
     <h2>Guide to Tags</h2>
