--- a/app/landing/templates/landing/landing.html
+++ b/app/landing/templates/landing/landing.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col">
               <h2>Techniques</h2><div  class="button comet glow-button" ><a href="{% url "unlimited-home" %}"><img src = "{% static 'landing/comet-symbol.png' %}" height="100%" width="100%" draggable="false"></a></div>
-              <h2>Dice</h2><div  class="button die glow-button" ><a href="{% url "roll"%}"><img src = "{% static 'landing/die-symbol.png' %}"  height="100%" width="100%" draggable="false"></div>
+              <h2>Dice</h2><div  class="button die glow-button" ><a href="{% url "roll"%}"><img src = "{% static 'landing/die-symbol.png' %}"  height="100%" width="100%" draggable="false"></a></div>
             </div>
         </div>
     </body>
