--- a/app/unlimited/templates/unlimited/technique.html
+++ b/app/unlimited/templates/unlimited/technique.html
@@ -29,7 +29,7 @@
         
     <p class="article-content">{{ object.content }}</p>
         <div>
-           Created By <img class="rounded-circle article-img" style="width:5%;height:5%;margin-left:6px;margin-right:6px" src="{{object.author.profile.pfp.url}}"><a class="mr-2" href="{% url "user-techniques" object.author.username %}">{{ object.author }}</a> 
+           Created By <img class="rounded-circle article-img" style="width:24px;height:24px;margin-left:6px;margin-right:6px" src="{{object.author.profile.pfp.url}}"><a class="mr-2" href="{% url "user-techniques" object.author.username %}">{{ object.author }}</a> 
         </div>
     </div>
 </article>
