--- a/app/unlimited/templates/unlimited/user_techniques.html
+++ b/app/unlimited/templates/unlimited/user_techniques.html
@@ -2,7 +2,9 @@
 {% block content %}
     <h1 class="mb-3">Tehcniques by {{ view.kwargs.username}} ({{ page_obj.paginator.count }})</h1>
     {% for object in techniques%}
-        {% include "unlimited/technique.html" %}
+        {% if object.public %}
+            {% include "unlimited/technique.html" %}
+        {% endif %}
     {% endfor %}
     {% if is_paginated %}
         {% if page_obj.has_previous %}
