--- a/app/unlimited/templates/unlimited/user_techniques.html
+++ b/app/unlimited/templates/unlimited/user_techniques.html
@@ -1,6 +1,6 @@
 {% extends "unlimited/base.html" %}
 {% block content %}
-    <h1 class="mb-3">Tehcniques by {{ view.kwargs.username}} ({{ page_obj.paginator.count }})</h1>
+    <h1 >Techniques by {{ view.kwargs.username}} ({{ page_obj.paginator.count }})</h1>
     {% for object in techniques%}
         {% if object.public %}
             {% include "unlimited/technique.html" %}
