content no longer required and reformated forceful and piercing

--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -65,7 +65,7 @@
                 <dd>How far your technique can reach. Default range is <b>Close</b>. Then <b>Reach</b>: up to 12 ft, <b>Near</b>: across a 6 lane road, <b>Far</b>: down the length of football field
                 , <b>Remote</b>: Out unaidded of sight</dd>
                 <dt>Forceful</dt>
-                <dd>Has a lot of force behind it, enough to move people around and knock them down. Every level can move targets about 10 more feet.</dd>
+                <dd>Has a lot of force behind it, enough to move people around and knock them down. Normal is no cost and no effect. Excessive can throw and drag people like a doll.</dd>
                 <dt>Disarming</dt>
                 <dd>Removes a weapon of the target, even natural ones.</dd>
               </dl> 
@@ -86,7 +86,7 @@
                 <dt>Armor Piercing</dt>
                 <dd>Damage done by this technique ignores targets' armor.</dd>
                 <dt>Combo</dt>
-                <dd>When you use this technique in tandem with another player's technique, <em>you</em>gain advantage on the roll and effect.</dd>
+                <dd>When you use this technique in tandem with another player's technique, <em>you</em> gain advantage on the roll and effect.</dd>
                 <dt>Controlled</dt>
                 <dd>If this technique targets an area, you can exempt people or places from the effects.</dd>
                 <dt>Destructive</dt>
@@ -120,7 +120,7 @@
                   <dd>How large of an area the technique affects. Default is no area. <b>Small</b> area has 10 foot radius each additional levels doubles the radius. <b>Large</b> is 40ft, <b>colossal</b> is 320.</dd>
                   <dd>None, Small, Medium, Large, Huge, Enormous, Colossal, Titanic</dd>
                   <dt>Create Terrain</dt>
-                  <dd>Change the physical terrain or create a new feature of your chocie. By default this change can affect a 7 foot radius.</dd>
+                  <dd>Change the physical terrain or create a new feature of your choice. By default this change can affect a 7 foot radius.</dd>
                   <dt>Practiced</dt>
                   <dd>When you use a practiced move your roll has +2.</dd>
                   <dt>Stunning</dt>
