--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -84,7 +84,7 @@
             <div class="card-body">
               <dl>
                 <dt>Armor Piercing</dt>
-                <dd>Damage done by this technique ignores targets' armor.</dd>
+                <dd>Damage done by this technique ignores targets' armor. When upgraded to armor shredding the targets' armor is nullified.</dd>
                 <dt>Combo</dt>
                 <dd>When you use this technique in tandem with another player's technique, <em>you</em> gain advantage on the roll and effect.</dd>
                 <dt>Controlled</dt>
