--- a/app/unlimited/static/unlimited/main.css
+++ b/app/unlimited/static/unlimited/main.css
@@ -161,6 +161,7 @@
   vertical-align: middle;
   text-decoration: none;
   justify-content: center;
+  margin-bottom: 4px;
 }
 .chip-head{
   display: flex;
