--- a/app/unlimited/templates/unlimited/user_techniques.html
+++ b/app/unlimited/templates/unlimited/user_techniques.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1 >Techniques by {{ view.kwargs.username}} ({{ page_obj.paginator.count }})</h1>
     {% for object in techniques%}
-        {% if object.public %}
+        {% if object.public or user.is_superuser %}
             {% include "unlimited/technique.html" %}
         {% endif %}
     {% endfor %}
