--- a/app/wiki/templates/wiki/Anno Hostis.html
+++ b/app/wiki/templates/wiki/Anno Hostis.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Ages.html" class="wikidpad">Ages</a></span> | <span class="wikidpad parent-node"><a href="Anno%20Novis.html" class="wikidpad">Anno Novis</a></span> | <span class="wikidpad parent-node"><a href="Anno%20Titanis.html" class="wikidpad">Anno Titanis</a></span> | <span class="wikidpad parent-node"><a href="Celestials.html" class="wikidpad">Celestials</a></span> | <span class="wikidpad parent-node"><a href="Classes.html" class="wikidpad">Classes</a></span> | <span class="wikidpad parent-node"><a href="Saints%20%26%20Prophets.html" class="wikidpad">Saints & Prophets</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Anno Hostis</h2>
