--- a/app/wiki/templates/wiki/Anno Innectis.html
+++ b/app/wiki/templates/wiki/Anno Innectis.html
@@ -1,6 +1,6 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
-<span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Ages.html" class="wikidpad">Ages</a></span> | <span class="wikidpad parent-node"><a href="Anno%20Belli.html" class="wikidpad">Anno Belli</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
+<span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Ages.html" class="wikidpad">Ages</a></span> | <span class="wikidpad parent-node"><a href="Anno%20Belli.html" class="wikidpad">Anno Belli</a></span> | <span class="wikidpad parent-node"><a href="Purgatus.html" class="wikidpad">Purgatus</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Anno Innectis</h2>
 The first age <br class="wikidpad" />
 <br class="wikidpad" />
