--- a/app/wiki/templates/wiki/Dulane Empire.html
+++ b/app/wiki/templates/wiki/Dulane Empire.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Age%20of%20Grandeur.html" class="wikidpad">Age of Grandeur</a></span> | <span class="wikidpad parent-node"><a href="Celestials.html" class="wikidpad">Celestials</a></span> | <span class="wikidpad parent-node"><a href="Mundane%20Metals.html" class="wikidpad">Mundane Metals</a></span> | <span class="wikidpad parent-node"><a href="Project%20Citadel.html" class="wikidpad">Project Citadel</a></span> | <span class="wikidpad parent-node"><a href="Qayamancy.html" class="wikidpad">Qayamancy</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Dulane Empire</h2>
@@ -39,6 +39,7 @@ The distance a spell can travel in kilometers over open ocean is equal to 3(p*lo
 <br class="wikidpad" />
 <br class="wikidpad" />
 <a name=".h2876" class="wikidpad"></a><h4 class="wikidpad heading-level4">Currency</h4>
+TODO dust and new material worths<br class="wikidpad" />
 The value ratios of raw materials is as follows: copper = 4<b class="wikidpad">tin, silver = 12</b>copper, gold = 20<b class="wikidpad">silver, adamantium = 5</b>gold, platinum = 10*gold.<br class="wikidpad" />
 Tin<br class="wikidpad" />
 <br class="wikidpad" />
@@ -59,5 +60,5 @@ Sel = 240p, standard gold coin, same size as silver 1, dunlaye circular design, 
 Adamantium<br class="wikidpad" />
 Ram = 3 sel, very rare not in mint<br class="wikidpad" />
 Plat<br class="wikidpad" />
-Dragon = 10 sel, rare not in mint, used to be 100 sel but since striking is less known the value has gone down since AoG<br class="wikidpad" />
+Dragon = 10 sel, rare not in mint, used to be 100 sel but since striking is less known the value has gone down since AOG<br class="wikidpad" />
     {% endblock content%}
