--- a/app/wiki/templates/wiki/Purgatus.html
+++ b/app/wiki/templates/wiki/Purgatus.html
@@ -1,7 +1,9 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Celestials.html" class="wikidpad">Celestials</a></span> | <span class="wikidpad parent-node"><a href="Cosmology.html" class="wikidpad">Cosmology</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Purgatus</h2>
 Universal Trait: use 3d6 instead of d20, when around very powerful devils no rolls flat 10.<br class="wikidpad" />
 <br class="wikidpad" />
-Devils have vastly different amounts of hard and societal power. Hard-power comes from a form of social contract between all devils that establishes who is the most powerful amongst them. Initially all devils have the exact same amount of hard-power, individuals choose to centralize it by giving away their power. The societal structure is not nessacarily organized along the same lines as hard-power.    {% endblock content%}
+<br class="wikidpad" />
+<a name=".h106" class="wikidpad"></a><h3 class="wikidpad heading-level3">Culture</h3>
+Devils have vastly different amounts of hard and societal power. Hard-power comes from a form of social contract between all devils that establishes who is the most powerful amongst them. Initially all devils had the exact same amount of hard-power, individuals chose to centralize it by giving away their power, this period of the centralization and development was <span class="wikidpad wiki-link"><a href="Anno%20Innectis.html" class="wikidpad">Anno Innectis</a></span>. The societal structure is not nessacarily organized along the same lines as hard-power.     {% endblock content%}
