--- a/app/wiki/templates/wiki/Qayamancy.html
+++ b/app/wiki/templates/wiki/Qayamancy.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Classes.html" class="wikidpad">Classes</a></span> | <span class="wikidpad parent-node"><a href="Jade%20Hand.html" class="wikidpad">Jade Hand</a></span> | <span class="wikidpad parent-node"><a href="Magic%20%26%20Materials.html" class="wikidpad">Magic & Materials</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Qayamancy</h2>
