--- a/app/wiki/templates/wiki/wiki-base.html
+++ b/app/wiki/templates/wiki/wiki-base.html
@@ -21,11 +21,18 @@
         <header class="site-header">
             <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
                 <div class="container">
-                <a class="navbar-brand mr-4" href="{% url "landing" %}">Selection Page</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                 </div>
+                    <a class="navbar-brand mr-4" href="{% url "landing" %}">Selection Page</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarToggle"> 
+                        <div class="navbar-nav mr-auto">
+                        <a class="nav-item nav-link" href="{% url "wiki-home" %}">Wiki Portal</a>
+                        <a class="nav-item nav-link" href="{% url "wiki-random" %}">Random Article</a>
+                        </div>
+                        <!-- Navbar Right Side -->
+                    </div>
+                </div>
             </nav>
         </header>
 
