--- a/app/landing/templates/landing/landing.html
+++ b/app/landing/templates/landing/landing.html
@@ -23,10 +23,10 @@
         <div class="flex-grid">
             <div class="col">
               <h2>Moves (WIP)</h2><div  class="button book glow-button" ><img src = "{% static 'landing/book-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
-              <h2>Lore Wiki </h2><div  class="button scroll glow-button" ><a href="{% url "wiki-home" %}"><img src = "{% static 'landing/scroll-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
+              <h2>Lore Wiki </h2><div  class="button scroll glow-button" ><a href="{% url "wiki-home" %}"><img src = "{% static 'landing/scroll-symbol.png' %}" height="100%" width="100%" draggable="false"></a></div>
             </div>
             <div class="col">
-              <h2>Techniques</h2><div  class="button comet glow-button" ><img src = "{% static 'landing/comet-symbol.png' %}" height="100%" width="100%" draggable="false"></a></div>
+              <h2>Techniques</h2><div  class="button comet glow-button" ><a href="{% url "unlimited-home" %}"><img src = "{% static 'landing/comet-symbol.png' %}" height="100%" width="100%" draggable="false"></a></div>
               <h2>Dice (WIP)</h2><div  class="button die glow-button" ><img src = "{% static 'landing/die-symbol.png' %}"  height="100%" width="100%" draggable="false"></div>
             </div>
         </div>
