--- a/app/wiki/templates/wiki/Age of Grandeur.html
+++ b/app/wiki/templates/wiki/Age of Grandeur.html
@@ -1,12 +1,13 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Ages.html" class="wikidpad">Ages</a></span> | <span class="wikidpad parent-node"><a href="Classes.html" class="wikidpad">Classes</a></span> | <span class="wikidpad parent-node"><a href="Elves.html" class="wikidpad">Elves</a></span> | <span class="wikidpad parent-node"><a href="Hydra%20Ex%20Alis.html" class="wikidpad">Hydra Ex Alis</a></span> | <span class="wikidpad parent-node"><a href="Qayamancy.html" class="wikidpad">Qayamancy</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Age of Grandeur</h2>
-The age when light was stronger than steel,<br class="wikidpad" />
-and our monuments to the gods did not require their permission.<br class="wikidpad" />
+"The age when light was stronger than steel,<br class="wikidpad" />
+and our monuments to the gods did not require their permission."<br class="wikidpad" />
 <br class="wikidpad" />
 <br class="wikidpad" />
 The Age of Grandeur is a Orthosian term for a time period across Anno Novis and Anno Halsyon, during which Orthosian civilizations generally reached their peak. Year 0 for the AOG has been determined by the first ever <i class="wikidpad">wish</i> of a wizard on the continent, marking the self-reliance of mortal magics. <br class="wikidpad" />
+<br class="wikidpad" />
 TODO wish created dwarves<br class="wikidpad" />
 <br class="wikidpad" />
 <span class="wikidpad wiki-link"><a href="Dulane%20Empire.html" class="wikidpad">Dulane Empire</a></span><br class="wikidpad" />
