--- a/app/wiki/templates/wiki/Anno Belli.html
+++ b/app/wiki/templates/wiki/Anno Belli.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Ages.html" class="wikidpad">Ages</a></span> | <span class="wikidpad parent-node"><a href="Anno%20Innectis.html" class="wikidpad">Anno Innectis</a></span> | <span class="wikidpad parent-node"><a href="Anno%20Titanis.html" class="wikidpad">Anno Titanis</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Anno Belli</h2>
