--- a/app/wiki/templates/wiki/Anno Novis.html
+++ b/app/wiki/templates/wiki/Anno Novis.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Ages.html" class="wikidpad">Ages</a></span> | <span class="wikidpad parent-node"><a href="Anno%20Halsyon.html" class="wikidpad">Anno Halsyon</a></span> | <span class="wikidpad parent-node"><a href="Anno%20Hostis.html" class="wikidpad">Anno Hostis</a></span> | <span class="wikidpad parent-node"><a href="Jade%20Hand.html" class="wikidpad">Jade Hand</a></span> | <span class="wikidpad parent-node"><a href="Lost%20Eon.html" class="wikidpad">Lost Eon</a></span> | <span class="wikidpad parent-node"><a href="Qayamancy.html" class="wikidpad">Qayamancy</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Anno Novis</h2>
