--- a/app/wiki/templates/wiki/Basilica of Pitas.html
+++ b/app/wiki/templates/wiki/Basilica of Pitas.html
@@ -1,5 +1,5 @@
 {% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Factions.html" class="wikidpad">Factions</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
-<a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Quubea</h2>
-The history of Quubea as recorded by archivist J-Mi    {% endblock content%}
+<a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Basilica of Pitas</h2>
+TODO lars' organization    {% endblock content%}
