--- a/app/wiki/templates/wiki/Celestials.html
+++ b/app/wiki/templates/wiki/Celestials.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Classes.html" class="wikidpad">Classes</a></span> | <span class="wikidpad parent-node"><a href="Sage%20Debates.html" class="wikidpad">Sage Debates</a></span> | <span class="wikidpad parent-node"><a href="Saints%20%26%20Prophets.html" class="wikidpad">Saints & Prophets</a></span> | <span class="wikidpad parent-node"><a href="Theology.html" class="wikidpad">Theology</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Celestials</h2>
