--- a/app/wiki/templates/wiki/Factions.html
+++ b/app/wiki/templates/wiki/Factions.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Ethos.html" class="wikidpad">Ethos</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Factions</h2>
@@ -8,7 +8,7 @@
 <br class="wikidpad" />
 <a name=".h86" class="wikidpad"></a><h3 class="wikidpad heading-level3">Churches</h3>
 <span class="wikidpad wiki-link"><a href="Paradox%20Order.html" class="wikidpad">Paradox Order</a></span><br class="wikidpad" />
-[Basilica of Pitas] <br class="wikidpad" />
+<span class="wikidpad wiki-link"><a href="Basilica%20of%20Pitas.html" class="wikidpad">Basilica of Pitas</a></span> <br class="wikidpad" />
 <br class="wikidpad" />
 <br class="wikidpad" />
 <a name=".h138" class="wikidpad"></a><h3 class="wikidpad heading-level3">Cults</h3>
