--- a/app/wiki/templates/wiki/Jot.html
+++ b/app/wiki/templates/wiki/Jot.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Species.html" class="wikidpad">Species</a></span> | <span class="wikidpad parent-node"><a href="Yetkilii.html" class="wikidpad">Yetkilii</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Jot</h2>
