--- a/app/wiki/templates/wiki/Jotunheim.html
+++ b/app/wiki/templates/wiki/Jotunheim.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Celestials.html" class="wikidpad">Celestials</a></span> | <span class="wikidpad parent-node"><a href="Cosmology.html" class="wikidpad">Cosmology</a></span> | <span class="wikidpad parent-node"><a href="Moreheim.html" class="wikidpad">Moreheim</a></span> | <span class="wikidpad parent-node"><a href="Yetkilii.html" class="wikidpad">Yetkilii</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Jotunheim</h2>
