--- a/app/wiki/templates/wiki/Knights of Dark Sun.html
+++ b/app/wiki/templates/wiki/Knights of Dark Sun.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Factions.html" class="wikidpad">Factions</a></span> | <span class="wikidpad parent-node"><a href="Nafarra.html" class="wikidpad">Nafarra</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Knights of Dark Sun</h2>
