--- a/app/wiki/templates/wiki/Magic & Materials.html
+++ b/app/wiki/templates/wiki/Magic & Materials.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Celestials.html" class="wikidpad">Celestials</a></span> | <span class="wikidpad parent-node"><a href="Classes.html" class="wikidpad">Classes</a></span> | <span class="wikidpad parent-node"><a href="Ethos.html" class="wikidpad">Ethos</a></span> | <span class="wikidpad parent-node"><a href="Qayamancy.html" class="wikidpad">Qayamancy</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Magic &amp; Materials</h2>
