--- a/app/wiki/templates/wiki/Moreheim.html
+++ b/app/wiki/templates/wiki/Moreheim.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Dulane%20Empire.html" class="wikidpad">Dulane Empire</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Moreheim</h2>
@@ -7,13 +7,13 @@
 <a name=".h15" class="wikidpad"></a><h4 class="wikidpad heading-level4">Demographics</h4>
 <a name=".h34" class="wikidpad"></a><h4 class="wikidpad heading-level4">Notable People</h4>
 Judge Jerricho Balthazar, portly blubbering human<br class="wikidpad" />
-Judge Naboon,<br class="wikidpad" />
+Judge Naboon, gnome<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h119" class="wikidpad"></a><h4 class="wikidpad heading-level4">Notable Places</h4>
-<a name=".h140" class="wikidpad"></a><h6 class="wikidpad heading-level6">Giant's Landing</h6>
+<a name=".h125" class="wikidpad"></a><h4 class="wikidpad heading-level4">Notable Places</h4>
+<a name=".h146" class="wikidpad"></a><h6 class="wikidpad heading-level6">Giant's Landing</h6>
 At the edge of city stands a large structure consisting of two 300 foot tall, manible-like, metal pillars that when activated create a gate to <span class="wikidpad wiki-link"><a href="Jotunheim.html" class="wikidpad">Jotunheim</a></span>.<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h320" class="wikidpad"></a><h6 class="wikidpad heading-level6">Augury Pools</h6>
+<a name=".h326" class="wikidpad"></a><h6 class="wikidpad heading-level6">Augury Pools</h6>
 <br class="wikidpad" />
-<a name=".h342" class="wikidpad"></a><h4 class="wikidpad heading-level4">History</h4>
+<a name=".h348" class="wikidpad"></a><h4 class="wikidpad heading-level4">History</h4>
     {% endblock content%}
