--- a/app/wiki/templates/wiki/Mundane Metals.html
+++ b/app/wiki/templates/wiki/Mundane Metals.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Metals%20%26%20Metaloids.html" class="wikidpad">Metals & Metaloids</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Mundane Metals</h2>
