--- a/app/wiki/templates/wiki/ScratchPad.html
+++ b/app/wiki/templates/wiki/ScratchPad.html
@@ -1,4 +1,4 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <br class="wikidpad" /><br class="wikidpad" /></span>
 <br class="wikidpad" />
