--- a/app/wiki/templates/wiki/Steel Hide.html
+++ b/app/wiki/templates/wiki/Steel Hide.html
@@ -1,5 +1,5 @@
-{% extends "unlimited/base.html" %}{% block content %} 
+{% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Age%20of%20Grandeur.html" class="wikidpad">Age of Grandeur</a></span> | <span class="wikidpad parent-node"><a href="Celestials.html" class="wikidpad">Celestials</a></span> | <span class="wikidpad parent-node"><a href="Mundane%20Metals.html" class="wikidpad">Mundane Metals</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Steel Hide</h2>
-    {% endblock content%}
+#TODO maybe delete    {% endblock content%}
